fix spacing on p element in default Hero slice

--- a/src/slices/HeroLargeImageWithLinks/defaultStyles.module.css
+++ b/src/slices/HeroLargeImageWithLinks/defaultStyles.module.css
@@ -32,7 +32,7 @@
 
 .linksRow p {
    font-size: 1.875rem;
-   margin: 0 1rem 1rem 0;
+   margin-bottom: 1rem;
 }
 
 .links {
@@ -91,6 +91,11 @@
       flex-direction: row;
       align-items: start;
       justify-content: center;
+   }
+
+   .linksRow p {
+      margin-right: 1rem;
+      margin-bottom: 0;
    }
 }
 
